(fix) IE fixes on cards; select arrow removed on IE

--- a/src/assets/css/organisms/_dropdown-group.scss
+++ b/src/assets/css/organisms/_dropdown-group.scss
@@ -37,4 +37,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
   }
+  select::-ms-expand {
+    display: none;
+  }
 }
