--- a/src/assets/css/organisms/card/_card-showcase.scss
+++ b/src/assets/css/organisms/card/_card-showcase.scss
@@ -6,6 +6,7 @@
     position: relative;
     background-color: white;
     cursor: pointer;
+    display: block;
 
     &.full {
       &.single-view {
@@ -43,7 +44,7 @@
     .social-stat-group {
       width: calc(66% - 2 * 1.6rem);
       position: absolute;
-      bottom: 0;
+      bottom: 1.2rem;
       .stats-list {
         div {
           float: left;
